<resources>
    <string name="app_name">Began Retail</string>
    <string name="login_name">အသုံးပြုသူအမည်</string>
    <string name="password">စကားဝှက်</string>
    <string name="login">၀င်မည်</string>
    <string name="forgot_password"><u>သင့်စကားဝှက်မေ့နေပါသလား</u></string>
    <string name="require_login_name">Enter your login name</string>
    <string name="require_login_password">Enter your login password</string>
    <string name="register"><u>Register</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="store_name">Store Name</string>
    <string name="owner_name">ကုန်သည်အမည်</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="contact_phone1">Contact Phone1</string>
    <string name="contact_phone2">Contact Phone2</string>
    <string name="commission">Commission</string>
    <string name="btn_register">Register</string>
    <string name="phone_number">ဖုန်းနံပါတ်</string>
    <string name="top_up_available_amount">ရရှိနိုင်သောဖုန်းငွေဖြည့်ငွေပမာဏ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="home">ပင်မ</string>
    <string name="sales">အရောင်း</string>
    <string name="items">ကုန်အမျိုးအစား</string>
    <string name="category_search">ရှာရန်</string>
    <string name="category_search_title">ကုန်ပစ္စည်းရှာရန်</string>
    <string name="withdraw_money_title">ငွေထုတ်</string>
    <string name="receive_items">ကုန်လက်ခံ</string>
    <string name="main_categories">ကုန်ပစ္စည်း</string>
    <string name="sub_categories">ကုန်အမျိုးအစားခွဲ</string>
    <string name="wallet_bank_account"><![CDATA[Wallet & Bank Account]]></string>
    <string name="stock_balance">ကုန်လက်ကျန်</string>
    <string name="require_user_name">Enter your user name</string>
    <string name="password_matcher">Password didn\'t match</string>
    <string name="receive_number">ကုန်အဝင်နံပါတ်</string>
    <string name="from_date">နေ့စွဲမှ</string>
    <string name="to_date">နေ့စွဲသို့</string>
    <string name="search">ရှာမည်</string>
    <string name="receive_date_from">နေ့စွဲမှ</string>
    <string name="receive_date_to">နေ့စွဲသို့</string>
    <string name="receive_date">ကုန်အဝင်နေ့စွဲ</string>
    <string name="distributor">လက်ခံသူအမည်</string>
    <string name="number_of_items">ကုန်ပစ္စည်းအရေအတွက်</string>
    <string name="payment_terms">Payment Terms</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="total_payment_amount">Total Payment Amount</string>
    <string name="edit">edit</string>
    <string name="view_detail">ကြည့်ရန်</string>
    <string name="main_category_code">ကုန်အမျိုးအစားကုဒ်</string>
    <string name="main_category_name">ကုန်အမျိုးအစားအမည်</string>
    <string name="status">Status</string>
    <string name="sub_category_code">ကုန်အမျိုးအစားခွဲကုဒ်</string>
    <string name="sub_category_name">ကုန်အမျိုးအစားခွဲအမည်</string>
    <string name="item_name">ကုန်ပစ္စည်းအမည်</string>
    <string name="barcode">Barcode</string>
    <string name="item_code">ကုန်ပစ္စည်းကုဒ်နံပါတ်</string>
    <string name="quantity">အရေအတွက်</string>
    <string name="sales_order_number">အရောင်းနံပါတ်</string>
    <string name="sales_order_date_from">Sales Order Date From</string>
    <string name="sales_order_date_to">Sales Order Date To</string>
    <string name="customer_name">ဝယ်သူအမည်</string>
    <string name="sales_order_date">အရောင်းနေ့စွဲ</string>
    <string name="sales_date">Sales Date</string>
    <string name="tax">အခွန်</string>
    <string name="total_sales_amount">Total Sales Amount</string>
    <string name="payment">ပေးငွေ</string>
    <string name="emoney_transaction_title">ငွေထုတ်စာရင်း</string>
    <string name="mykyat">MyKyat</string>
    <string name="wave_money">Wave Money</string>
    <string name="bagan_retail">Bagan Retail</string>
    <string name="cp_pay">CP Pay</string>
    <string name="aya_pay">AYA Pay</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="add_sales_item">Add sales item</string>
    <string name="qr_code">QR Code</string>
    <string name="add_item">Add Item</string>
    <string name="scan">Scan</string>
    <string name="uom">ယူနစ်</string>
    <string name="add">Add</string>
    <string name="main_category">Main Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="total_out">အထွက်</string>
    <string name="balance">Balance</string>
    <string name="total_in">အဝင်</string>
    <string name="selling_price">ရောင်းဈေး</string>
    <string name="amount">ကျသင့်ငွေ</string>
    <string name="total_amount">စုစုပေါင်းကျငွေ</string>
    <string name="remark">Remark</string>
    <string name="payment_status">Payment Status</string>
    <string name="pending">Pending</string>
    <string name="paid">Paid</string>
    <string name="save">သိမ်းမည်</string>
    <string name="new_balance">New Balance</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="close">Close</string>
    <string name="delivery_order_number">ပေးပို့နံပါတ်</string>
    <string name="payment_date">ပေးသည့်နေ့စွဲ</string>
    <string name="collect_by">Collect By</string>
    <string name="payment_type">Payment Type</string>
    <string name="total_paid_amount">Total Paid Amount</string>
    <string name="kbz_pay">KBZ Pay</string>
    <string name="next">Next</string>
    <string name="ok">ဟုတ်ပြီ</string>
    <string name="loading">Loading…</string>
    <string name="nrc_number">123456</string>
    <string name="nrc">NRC</string>
    <string name="require_password">Enter your password</string>
    <string name="require_confirm_password">Enter your confirm password</string>
    <string name="require_store_name">Enter your store name</string>
    <string name="require_owner_name">Enter your owner name</string>
    <string name="require_nrc">Enter your NRC</string>
    <string name="require_phone1">Enter your phone number</string>
    <string name="require_address">Enter your address</string>
    <string name="today_total_sales_amount">ယနေ့စုစုပေါင်း ရောင်းရငွေ</string>
    <string name="add_receive_item">ကုန်အဝင်အသစ်ထည့်ရန်</string>
    <string name="add_sales">အရောင်းအသစ်ထည့်ရန်</string>
    <string name="sales_amount">ရောင်းရငွေ</string>
    <string name="add_new_item">ပစ္စည်းထည့်ရန်</string>
    <string name="price">ဈေးနှုန်း</string>
    <string name="cancel">မသိမ်းပါ</string>
    <string name="cost">ကျသင့်ငွေ</string>
    <string name="save_alert">ကုန်ပစ္စည်းသိမ်းမရပါ</string>
    <string name="deliver_no_alert">ပေးပို့နံပါတ်ရွေးပါ</string>
    <string name="out_of_stock">ကုန်လက်ကျန်</string>
    <string name="payment_no">ငွေပေးချေမှုနံပါတ်</string>
    <string name="bal_to_paid">ပေးရန်ကျန်ငွေ</string>
    <string name="set_the_price">ဈေးနှုန်းသတ်မှတ်ရန်</string>
    <string name="price_look">ဈေးနှုန်းကြည့်ရန်</string>
    <string name="add_price">ဈေးနှုန်းထည့်မည်</string>
    <string name="toolbar_name"><![CDATA[<b>Welcome, %1$s</b>]]></string>
    <string name="order_item_price"><![CDATA[%1$s ကျပ်]]></string>
    <string name="order_item_commission"><![CDATA[%1$s %%]]></string>
    <string name="receive_item_commission_label"><![CDATA[<b>ကော်မရှင်ရာခိုင်နှုန်း(%1$s %%)</b>]]></string>
    <string name="receive_item_tax_label"><![CDATA[<b>အခွန်(%1$s %%)</b>]]></string>
    <string name="order_item_cost"><![CDATA[%1$s ကျပ်]]></string>
    <string name="cashout_amount"><![CDATA[%1$s ကျပ်]]></string>
    <string name="no_items">ကုန်ပစ္စည်းမရှိပါ</string>
    <string name="total_order_price">စုစုပေါင်းငွေပမာဏ: <![CDATA[<b>%1$s ကျပ်</b>]]></string>
    <string name="total_receive_order_price">စုစုပေါင်းငွေပမာဏ: <![CDATA[<b>%1$s ကျပ် </b>]]></string>
    <string name="total_commission">ကော်မရှင်ရာခိုင်နှုန်း : <![CDATA[<b>(%1$s %%)</b>]]></string>
    <string name="total_today_sales_amount">ယနေ့စုစုပေါင်း ရောင်းရငွေ: <![CDATA[<b>%1$s ကျပ်</b>]]></string>
    <string name="user_amount">ငွေလက်ကျန် : <![CDATA[<b>%1$s ကျပ်</b>]]></string>
    <string name="number_of_main_category">ကုန်အမျိုးအစားအရေအတွက်: <![CDATA[<b>%1$s</b>]]></string>
    <string name="number_of_sub_category">ကုန်အမျိုးအစားခွဲအရေအတွက်: <![CDATA[<b>%1$s</b>]]></string>
    <string name="number_of_item">ကုန်ပစ္စည်းအရေအတွက်: <![CDATA[<b>%1$s</b>]]></string>
    <string name="receive_name_alert">လက်ခံသူအမည် ဖြည့်ပါ</string>
    <string name="receive_no_alert">ကုန်အဝင်နံပါတ်ဖြည့်ပါ</string>
    <string name="success_message">သိမ်းဆည်းခြင်းအောင်မြင်ပါသည်</string>
    <string name="no_delivery_no_alert">ပေးပို့နံပါတ်မရှိပါ</string>
    <string name="no_receive_numbers_alert">ကုန်အဝင်နံပါတ်မရှိသေးပါ</string>
    <string name="date_compare">အစနေ့စွဲသည်အဆုံးနေ့စွဲထက် ညီ(ဒါမှမဟုတ်)ကြီးရမည်</string>
    <string name="search_date">နေ့စွဲမှ: <![CDATA[<b><font color=#000000>%1$s</font></b>]]> နေ့စွဲသို့: <![CDATA[<b><font color=#000000>%2$s</font></b>]]></string>
    <string name="no_receive_item">ကုန်ပစ္စည်းမရှိပါ</string>
    <string name="order_list">ကုန်ပစ္စည်းစာရင်း</string>
    <string name="logout">အကောင့်ထွက်ရန်</string>
    <string name="kyat">ကျပ်</string>
    <string name="success_set_selling_price">ဈေးနှုန်းသတ်မှတ်ခြင်းအောင်မြင်ပါသည်</string>
    <string name="not_enough_quantity">ပစ္စည်းရောင်းဖို့လုံလောက်တဲ့အရေအတွက်မရှိပါ</string>
    <string name="no_sale_number">အရောင်းနံပါတ်မရှိပါ</string>
    <string name="success_sales_orders_save">အရောင်းပစ္စည်းများသိမ်းဆည်းခြင်း အောင်မြင်ပါသည်</string>
    <string name="com_per">ကော်မရှင်ရာခိုင်နှုန်း</string>
    <string name="set_selling_price_warning_msg">ဈေးနှုန်းပြင်ရန်သေချာပါသလား</string>
    <string name="cancel_dialog_msg">မလုပ်ပါ</string>
    <string name="ok_dialog_msg">လုပ်မည်</string>
    <string name="enter_qty">အရေအတွက်ရိုက်ထည့်ပါ</string>
    <string name="enter_price">ဈေးနှုန်းသတ်မှတ်ပါ</string>
    <string name="no_uom">ယူနစ်မရှိပါ</string>
    <string name="update">ပြင်ရန်</string>
    <string name="success">အောင်မြင်ပါသည်</string>
    <string name="warning_msg_update_qty">ကုန်ပစ္စည်းအရေအတွက်ပြင်ရန်သေချာပါသလား</string>
    <string name="surrent_date_sale_update">ယနေ့အရောင်းကိုသာပြင်နိုင်ပါသည်</string>
    <string-array name="nrc_nationality">
        <item>(N)</item>
    </string-array>
    <string name="amt_1000">1,000</string>
    <string name="amt_3000">3,000</string>
    <string name="amt_5000">5,000</string>
    <string name="amt_10000">10,000</string>
    <string name="msg_continue">ဆက်ရန်</string>
    <string name="operator_require_msg">အော်ပရေတာကိုရွေးပါ</string>
    <string name="mobile_require_msg">ဖုန်းနံပါတ်ထည့်ပါ</string>
    <string name="amount_require_msg">ပမာဏကိုရွေးချယ်ပါ</string>
    <string name="invalid_mobile_no">မမှန်ကန်သောမိုဘိုင်းနံပါတ် …</string>
    <string name="mobile_and_provider_not_match">ရွေးချယ်ထားသောအော်ပရေတာနှင့်မိုဘိုင်းနံပါတ်သည်မကိုက်ညီပါ</string>
    <string name="success_top_up">ငွေဖြည့်သွင်းခြင်း အောင်မြင်ပါသည်။</string>
    <string name="top_up_mobile"><![CDATA[ဖုန်းနံပါတ်: <font color=#1E88E5>%1$s</font>]]></string>
    <string name="top_up_amount"><![CDATA[ငွေဖြည့်ပမာဏ: <font color=#1E88E5>%1$s</font> ကျပ်]]></string>
    <string name="confirm_request_amount"><![CDATA[ငွေပမာဏ <font color=#1E88E5>%1$s</font> ကျပ်ကို ထုတ်ယူရန် သေချာပါသလား…]]></string>
    <string name="top_up_detect_amount"><![CDATA[<font color=#1E88E5>%1$s</font> ကျပ်ကို သင်၏ အကောင့်မှနှုတ်ယူလိမ့်မည်]]></string>
    <string name="request_amount">ငွေထုတ်ချင်သည့် ပမာဏ</string>
    <string name="withdraw">ငွေထုတ်ရန်</string>
    <string name="confirm">သေချာသည်</string>
    <string name="reject">ပယ်ဖျက်သည်</string>
</resources>