<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sales.SalesOrdersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.frontiertechnologypartners.beganretail.widgets.MMTextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/sales_order_number"
            app:boxStrokeColor="@color/register_input_box_stroke">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sales_order_no"
                style="@style/TextInputEditTextStyle" />

        </com.frontiertechnologypartners.beganretail.widgets.MMTextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sales_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sale_date"
            style="@style/ImageButtonStyle"
            android:drawableEnd="@drawable/ic_date_range_24dp"
            android:hint="@string/sales_date"
            android:singleLine="true"
            android:textAlignment="textStart" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/customer_name"
            app:boxStrokeColor="@color/register_input_box_stroke">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_customer_name"
                style="@style/TextInputEditTextStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/tax"
            app:boxStrokeColor="@color/register_input_box_stroke">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_tax"
                style="@style/TextInputEditTextStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:hint="@string/total_sales_amount"
            app:boxStrokeColor="@color/register_input_box_stroke">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_total_sales_amount"
                style="@style/TextInputEditTextStyle" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/payment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/spinner_background"
            android:orientation="vertical"
            android:padding="5dp">

            <RadioGroup
                android:id="@+id/first_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_myKyat"
                    style="@style/RadioStyle"
                    android:checked="true"
                    android:text="@string/mykyat" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_wave"
                    style="@style/RadioStyle"
                    android:text="@string/wave_money" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_bagan_retail"
                    style="@style/RadioStyle"
                    android:text="@string/bagan_retail" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/second_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_cp"
                    style="@style/RadioStyle"
                    android:text="@string/cp_pay" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_aya"
                    style="@style/RadioStyle"
                    android:text="@string/aya_pay" />

            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/status" />

        <RadioGroup
            android:id="@+id/status_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_active"
                style="@style/RadioStyle"
                android:checked="true"
                android:text="@string/active" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_inactive"
                style="@style/RadioStyle"
                android:text="@string/inactive" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sales"
                style="@style/smallButtonStyle"
                android:layout_weight="1"
                android:text="@string/sales" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_sales_item"
                style="@style/smallButtonStyle"
                android:layout_weight="1"
                android:text="@string/add_item" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_qr_code"
                style="@style/smallButtonStyle"
                android:layout_weight="1"
                android:text="@string/qr_code" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_payment"
                style="@style/smallButtonStyle"
                android:layout_weight="1"
                android:text="@string/payment" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>