<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.receive_items.ReceiveItemsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <org.mmtextview.components.MMButton
            android:id="@+id/btn_add_receive_item"
            style="@style/ContinueButtonStyle"
            android:layout_marginBottom="5dp"
            android:text="@string/add_receive_item" />

        <org.mmtextview.components.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/receive_number"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_receive_number"
            style="@style/SpinnerStyle" />

        <org.mmtextview.components.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/receive_date_from" />

        <org.mmtextview.components.MMButton
            android:id="@+id/btn_from_date"
            style="@style/ImageButtonStyle"
            android:drawableEnd="@drawable/ic_date_range_24dp"
            android:hint="@string/from_date"
            android:singleLine="true"
            android:textAlignment="textStart" />

        <org.mmtextview.components.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/receive_date_to" />

        <org.mmtextview.components.MMButton
            android:id="@+id/btn_to_date"
            style="@style/ImageButtonStyle"
            android:drawableEnd="@drawable/ic_date_range_24dp"
            android:hint="@string/to_date"
            android:singleLine="true"
            android:textAlignment="textStart" />

        <org.mmtextview.components.MMButton
            android:id="@+id/btn_search"
            style="@style/ContinueButtonStyle"
            android:layout_marginBottom="10dp"
            android:text="@string/search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_receive_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>