<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.emoney_request.EmoneyRequestConfirmFragment">

    <org.mmtextview.components.MMTextView
        android:id="@+id/tv_request_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/hello_blank_fragment"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <org.mmtextview.components.MMButton
            android:id="@+id/btn_confirm"
            style="@style/smallButtonStyle"
            android:layout_weight="1"
            android:text="@string/confirm" />

        <org.mmtextview.components.MMButton
            android:id="@+id/btn_cancel"
            style="@style/smallButtonStyle"
            android:layout_weight="1"
            android:text="@string/reject" />
    </LinearLayout>

</LinearLayout>